# cratchit

./: .clang-format  .gitignore  .out  2021_SRU.csv  CLAUDE.md  CMakeLists.txt  CmakeLists.txt  Development_Journal.txt  LICENSE  README.md  _LIBCPP_HAS_NO_INCOMPLETE_RANGES.txt  _config.yml  bclang++13.sh  bclang++14.sh  bg++11.sh  command_to_repeat.txt  conanfile.py  cp435_test.txt  cratchit copy.se  cratchit correct 220812 11.35 .se  cratchit.env  cratchit.se  generate_clang_format_styles.zsh  go_repl.zsh  index.md  init_new.py  init_tool_chain.zsh  libc++_defines.txt  pick_clang_format.zsh  rinse_and_repeat.py  run.zsh  update_index.py
cratchit.out.dSYM/Contents/: Info.plist
docs/: README.md  thinking.md
docs/developers_manual/: README.md
docs/thinking/: thinking.md
docs/users_manual/: README.md
from_bank_or_skv/: PLUSGIROKONTO FTG 51 86 87-9 - 2022-10-08 10.51.23.csv  SPARKONTO FÖRETAG 3259 23 17244 - 2022-10-08 10.54.03.csv  avstper_trans_165567828172-2.skv  avstper_trans_165567828172-3.skv  avstper_trans_165567828172-4.skv  avstper_trans_165567828172-5.skv  avstper_trans_165567828172-6.skv  avstper_trans_165567828172-7.skv  avstper_trans_165567828172-8.skv  avstper_trans_165567828172.skv  bokf_trans_165567828172.skv
include/: cratchit.h
issues/: Potential error in syncing with SIE file from external tool?.md  What is missing to close branch origin:claude-001-refactor-csv-import-pipeline?.md
note/: index.md
note/25c66136/: note.md
prompts/: 002-encoding-detection.md  003-bytes-to-unicode-view.md  004-unicode-to-runtime-view.md  005-encoding-pipeline-integration.md  006-text-to-csv-table.md  007-csv-to-account-statements.md  008-statement-to-tagged-amounts.md  008-statements-to-tagged-amounts.md  009-full-pipeline-integration.md  010-refactor-tagged-amount-framework.md  011-refactor-parse-csv.md
prompts/completed/: 001-file-io-maybe-monad.md  001-refactor-csv-import-pipeline.md  002-encoding-detection.md  003-bytes-to-unicode-view.md  004-unicode-to-runtime-view.md  006-csv-text-to-table-neutral.md  006-text-to-csv-table.md  007-csv-to-account-id.md  007-csv-to-account-statement.md  009-full-pipeline-integration.md  010-refactor-tagged-amount-framework.md  011-refactor-parse-csv.md
resources/: Exempelfil_01_Vanliga_lontagare_v1.1.9.xml  INK1_SKV2000-31-02-0021-01_SKV269.csv  INK2R_SKV2002-30-01-20-02.csv  INK2_19_P1-intervall-vers-2.csv  INK2_19_P1-intervall-vers-2.xls  INK2_P1_intervall-241119.csv  INK2_SKV2002-30-01-20-02_SKV269.csv  INK2_SKV2002-30-01-20-02_SKV269.xls  Kontoplan-2022.csv  Kontoplan-2022.xlsx  Kontoplan-BAS-2024.xlsx  README.md  README_URLS.txt
resources/BAS/: INK1_SKV2000-31-02-0021-01_SKV269.xls  INK2S_SKV2002-30-01-20-02.csv  INK2_19-P1-exkl-version-2.csv  INK2_19-P1-exkl-version-2.xls  INK2_P1_intervall-241119.numbers  INK2_P1_intervall-241119.xlsx  K10_SKV2110-34-04-21-02.csv  K10_SKV2110-34-04-21-02.xls
resources/_Nyheter_from_beskattningsperiod_2024P4/: INK2S_SKV2002-33-01-24-04.xls  INK3K_SKV2003-32-01-24-01.xls  INK3SUS_SKV2003-32-01-24-01.xls  INK3S_SKV2003-32-01-24-07.xls  INK4S_SKV2004-32-01-24-06.xls  K10A_SKV2110a-19-02-24-01.xls  K10_SKV2110-37-04-24-01.xls  K11_SKV2111-03-01-18-02.xls  K15A_SKV2115-15-01-17-01.xls  K4_SKV2104-27-02-19-01.xls  K7_SKV2107-27-01-22-01.xls  Landkoder_EES_2022.xls  Lokala_Skattekontor_for_anstan.xls  N3B_SKV2167-23-01-18-01.xls  N4_SKV2154-17-01-15-01.xls  NEA_SKV2164-10-02-17-01.xls  NE_SKV2161-12-02-23-02.xls  README.md
resources/annual_report/: balance_sheet_template  directors_report_template  financial_statements_approval_template  notes_template  profit_and_loss_statement_template
skv_specs/: INK1_SKV2000-32-02-0022-02_SKV269.csv  README.TXT
skv_specs/_Nyheter_from_beskattningsperiod_2024P4 (2)/: Filexempel_20XX.xls  Fritext_FO.xls  (+23 more)
source/: CmakeLists.txt  cratchit.cpp  msys2_me.sh  openSIE.cpp  vs_me.cmd
src/: FiscalPeriod.cpp  FiscalPeriod.hpp  Framework.cpp  Framework.hpp  HAD2JournalEntryFramework.cpp  HAD2JournalEntryFramework.hpp  KEY.cpp  Key.cpp  Key.hpp  KeyValueMap.cpp  KeyValueMap.hpp  MetaDefacto.hpp  Mod10View.cpp  Mod10View.hpp  PeriodConstrainedContent.hpp  PersistentFile.hpp  RuntimeEncoding.cpp  RuntimeEncoding.hpp  cas.hpp  cmd.cpp  cmd.hpp  cpp_compile_playground.cpp  cratchit.cpp  cratchit.env  cratchit.h  cratchit.se  cratchit_tea.cpp  cratchit_tea.hpp  cross_dependent.hpp  diff_view.hpp  environment.cpp  environment.hpp  hash_combine.hpp  main  main.cpp  mod10view.cpp  mod10view.hpp  model.hpp  msg.cpp  msg.hpp  (+9 more)
test/: PLUSGIROKONTO FTG 51 86 87-9 - 2022-07-16 23.14.03.csv  PLUSGIROKONTO FTG 51 86 87-9 - 2022-07-16 23.16.24.csv  PLUSGIROKONTO FTG 51 86 87-9 - 2022.05.18 10.48.csv  PLUSGIROKONTO FTG 51 86 87-9 - 21-10 - 22-03.csv  SPARKONTO FÖRETAG 3259 23 17244 - 2022-07-16 23.17.12.csv  SPARKONTO FÖRETAG 3259 23 17244 - 2022.05.18 10.49.csv  TheITfiedAB 21-04 - 20220425.se  TheITfiedAB2005_2104_220422.se  TheITfiedAB20220511_153728.se  TheITfiedAB20220511_160050.se  TheITfiedAB20220511_162525.se  TheITfiedAB20220512_181802.se  TheITfiedAB20220512_212603.se  TheITfiedAB20220512_215145.se  TheITfiedAB20220512_220324.se  TheITfiedAB20220512_220653.se  TheITfiedAB20220512_233434.se  TheITfiedAB20220812_165802.se  TheITfiedAB20220812_165817.se  TheITfiedAB2105_2204_220422.se  eskd_503072_20220511_1631 copy.eskd.xml  eskd_503072_20220511_1631.eskd
test_package/: CMakeLists.txt  conanfile.py
to_skv/: arbetsgivaredeklaration_202205.xml  arbetsgivaredeklaration_202206.xml  arbetsgivaredeklaration_202207.xml  arbetsgivaredeklaration_202208.xml  arbetsgivaredeklaration_202209.xml  arbetsgivaredeklaration_202210.xml  arbetsgivaredeklaration_21-Q4.xml  moms_202109.eskd  moms_202112.eskd  moms_202203.eskd  moms_202206.eskd  moms_202209.eskd  periodisk_sammanstallning_21-3.csv  periodisk_sammanstallning_21-4.csv  periodisk_sammanstallning_22-1 SKICKAD .csv  periodisk_sammanstallning_22-1_20220528.csv  periodisk_sammanstallning_22-2_20220425.csv  periodisk_sammanstallning_22-2_20220725.csv  periodisk_sammanstallning_22-3_20221025.csv
todo/: index.md
(+241 files in other folders)
